--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,6 +27,7 @@ $breakpointTablet : 991px;
 @import 'components/images';
 @import 'components/mailchimp';
 
+@import 'components/image-bg';
 @import 'components/image-square';
 @import 'components/atom';
 
