--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,6 +23,7 @@ $breakpointTablet : 991px;
 @import 'components/logo';
 @import 'components/home';
 @import 'components/home_nav';
+@import 'components/nav';
 
 @import 'components/images';
 @import 'components/mailchimp';
