--- a/app/styles/components/nav.scss
+++ b/app/styles/components/nav.scss
@@ -4,4 +4,7 @@
 .menu li a.active {
 	opacity: 1 !important;
 	background: linear-gradient(transparent 95%, white 95%, white 100% );
+	@media all and (max-width: $breakpointTablet) {
+		background: none;
+	}
 }
