--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,7 +2,7 @@ $breakpointTablet : 991px;
 
 @import 'base/bootstrap';
 
-// @import 'vendor/flexslider';
+@import 'vendor/flexslider';
 // @import 'vendor/lightbox.min';
 // @import 'vendor/ytplayer';
 
