--- a/app/styles/custom/resets.less
+++ b/app/styles/custom/resets.less
@@ -1,3 +1,13 @@
 .heading-block h1 {
 	color: #89ac4a;
 }
+
+#header.full-header #logo,
+#header.full-header #primary-menu>ul {
+	border-right: none;
+}
+
+
+#logo img {
+	max-height: 99px;
+}
