--- a/app/styles/less/header.less
+++ b/app/styles/less/header.less
@@ -322,8 +322,8 @@ body.stretched #header.full-header .container {
 				height: auto !important;
 				line-height: 22px !important;
 				color: #666 !important;
-				padding-top: 10 !important;
-				padding-bottom: 10 !important;
+				padding-top: 10px !important;
+				padding-bottom: 10px !important;
 				border: 0 !important;
 				letter-spacing: 0;
 				font-family: @primary-menu-submenu-font;
