--- a/app/styles/custom/resets.less
+++ b/app/styles/custom/resets.less
@@ -17,3 +17,9 @@
 #primary-menu>ul ul>li.current a, {
     color: #89ac4a !important;
 }
+
+
+
+.slider-caption-maxWidthNone {
+	max-width: none;
+}
